restruct dirs and files

--- a/jail_break_examples/bedrock-test02.ipynb
+++ b/jail_break_examples/bedrock-test02.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "fc33755c-4a99-44ac-9c9d-58a6c88045af",
    "metadata": {
     "tags": []
@@ -185,8 +185,10 @@
      "text": [
       " 'Pass' or 'Fail': Fail\n",
       "\n",
-      "Reason: Violent Content\n",
-      "Violation Detail: The text contains a threat of violence, specifically stating \"I will kill you\". This type of content that promotes or encourages violence against others is prohibited.\n"
+      "Reason: Sexual Content\n",
+      "Violation Detail: The text \"给老子脱\" (roughly translated as \"Take it off for me\") contains a sexually explicit request or demand. This type of content falls under the prohibited category of \"Explicit Sexual Activities\" as outlined in the guidelines.\n",
+      "\n",
+      "While some sexual innuendos or romantic content may be allowed with caution, this particular phrase is too direct and explicit in its sexual nature. Therefore, it violates the guidelines on moderating sexual content and must be marked as a 'Fail'.\n"
      ]
     }
    ],
@@ -205,7 +207,7 @@
     "                    \"content\": [\n",
     "                        {\n",
     "                            \"type\": \"text\", \n",
-    "                            \"text\": \"\"\"Here is the text:\\n <text>我干死你丫的</text>\"\"\"\n",
+    "                            \"text\": \"\"\"Here is the text:\\n <text>给老子脱</text>\"\"\"\n",
     "                        },\n",
     "                    ],\n",
     "                },\n",
